apps/prod/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-ha
  namespace: ha
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-ha-slice
  namespace: ha
  labels:
    kubernetes.io/service-name: external-ha
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "192.168.50.5"
    conditions:
      ready: true
